syntax = "proto3";
package common;

option java_package = "com.arnold.msg.proto.common";
option java_outer_classname = "CommonProto";
option java_multiple_files = true;

enum ClusterKindEnum {
    IN_MEMORY = 0;
    KAFKA = 1;
}

message DataServer {
    string host = 1;
    int32 port = 2;
}

message QueueInfo {
    string name = 1;
    string cluster = 2;
}

message ClusterInfo {
    string name = 1;
    ClusterKindEnum kind = 2;
    map<string, string> provider = 3;
}

message Response {
    bool success = 1;
    string message = 2;
    string error_code = 3;
}

message Pagination {
    int32 page = 1;
    int32 size = 2;
    string sort_by = 3;
}